--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,19 @@
-fastapi==0.100.0
-hypercorn==0.14.4
+annotated-types==0.6.0
+anyio==4.2.0
+exceptiongroup==1.2.0
+fastapi==0.109.2
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+Hypercorn==0.16.0
+hyperframe==6.0.1
+idna==3.6
+priority==2.0.0
+pydantic==2.6.1
+pydantic_core==2.16.2
+sniffio==1.3.0
+starlette==0.36.3
+taskgroup==0.0.0a4
+tomli==2.0.1
+typing_extensions==4.9.0
+wsproto==1.2.0
